Added additional debug information

--- a/JustAMessenger/Web.config
+++ b/JustAMessenger/Web.config
@@ -16,6 +16,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="AppUseDetailedDebug" value="10$ChEИko ВuTаLIу AHdРeЕVиCХ R0мE+40241*10/2 Вк.C0m/l o s h v i t a l i k 1695517289"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
